# cookiecutter-trio

./: .travis.yml  README.rst  cookiecutter.json
ci/: travis.sh
hooks/: post_gen_project.py
license-files/dual-mit-apache2/: LICENSE
license-files/other/: LICENSE-IS-MISSING
tests/: test_stuff.py
{{cookiecutter.project_slug}}/: .appveyor.yml  .coveragerc  .travis.yml  CHEATSHEET.rst  MANIFEST.in  README.rst  azure-pipelines.yml  check.sh  ci.sh  mypy.ini  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/ci/: travis.sh
{{cookiecutter.project_slug}}/docs/: Makefile  make.bat
{{cookiecutter.project_slug}}/docs/source/: conf.py  history.rst  index.rst
{{cookiecutter.project_slug}}/license-files/gplv3+/: LICENSE
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/_tests/: conftest.py  test_example.py
