[tool.towncrier]
package = "{{cookiecutter.package_name}}"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
# COOKIECUTTER-TRIO-TODO: fill in the URL below to point to your issue tracker:
issue_format = "`#{issue} <https://github.com/ACCOUNT/REPO/issues/{issue}>`__"

[build-system]
requires = [
    "setuptools >= 50.0.3",
    "wheel >= 0.35.1",
]
build-backend = "setuptools.build_meta"
